--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,10 @@ img {
 	font-size: 30px;
 	line-height: 30px;
 	text-transform: uppercase;
+	margin: 0;
+	padding-top: 30px;
+	padding-bottom: 30px;
+
 }
 
 .log-in,
@@ -169,8 +173,9 @@ img {
 	left: 0;
 	width: 22px;
 	height: 40px;
-	background-image: url(../img/icon_slider_right.svg);
+	background-image: url(../img/icon_slider_switching.png);
 	background-repeat: no-repeat;
+	transform: rotate(180deg);
 	position: absolute;
 }
 
@@ -179,6 +184,7 @@ img {
 	padding-right: 61px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	margin-top: 25px;
 }
 
 .feed-back-button:active {
@@ -235,9 +241,6 @@ img {
 	padding-left: 43px;
 }
 
-.nav-menu {
-	min-height: 60px;
-}
 .nav-menu .ul-style:last-child {
 	margin-right: 47px;
 }
@@ -247,12 +250,11 @@ img {
 	flex-wrap: wrap;
 	align-items: center;
 	list-style-type: none;
-	min-height: inherit;
 	padding: 0;
 }
 
 .ul-style:first-child {
-	margin-left: 52px;
+	margin-left: 71px;
 }
 
 .ul-style li {
@@ -274,6 +276,8 @@ img {
 
 .main-header {
 	font-family: "Cuprum", Arial, sans-serif;
+	font-size: 18px;
+	line-height: 24px;
 	background-color: var( --basic-periwinkle-craiola);
 }
 
@@ -297,10 +301,18 @@ img {
 }
 
 .head-logo {
+	position: absolute;
+	top: 0;
+	left: 0;
 	width: 220px;
 	min-height: 47px;
 	background-color: var(--basic-carmine-pink);
 	box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
+}
+
+.head-logo img {
+	padding-top: 12px;
+	padding-left: 55px;
 }
 
 .head-logo:active {
@@ -411,8 +423,8 @@ img {
 	width: 100px;
 	min-width: 42px;
 	position: relative;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 9px;
+	padding-bottom: 9px;
 	padding-left: 30px;
 
 }
@@ -441,8 +453,8 @@ img {
 	width: 100px;
 	min-width: 42px;
 	position: relative;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 9px;
+	padding-bottom: 9px;
 	padding-left: 30px;
 
 }
@@ -478,8 +490,10 @@ img {
 
 .checkout-main-panel {
 	width: 150px;
-	min-height: 42px;
 	background-color: var( --basic-dark-green);
+	text-align: center;
+	padding-top: 10px;
+	
 }
 
 .checkout-main-panel:active {
@@ -533,11 +547,12 @@ img {
 
 .search-form {
 	position: relative;
+	margin-left: 220px;
 }
 .search-field input {
 	font-family: "Cuprum", Arial, sans-serif;
 	font-weight: 400;
-	font-size: 14px;
+	font-size: 18px;
 	line-height: 24px;
 	color: var(--basic-white);
 }
@@ -612,7 +627,8 @@ img {
 .main-nav {
 	background-color: var(--basic-purple-blue);
 	width: 940px;
-	min-height: 60px;
+	padding-top: 18px;
+	padding-bottom: 18px;
 	margin: 0 auto;
 	margin-bottom: 60px;
 }
@@ -628,6 +644,11 @@ img {
 .main-nav a:active {
 	background-color: var(--basic-dark-blue);
 	opacity: 0.5;
+}
+
+.main-nav .ul-style {
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
 .promo-block h3:nth-last-child(2n) {
@@ -666,7 +687,6 @@ img {
 .del-link {
 	display: block;
 	width: 135px;
-	min-height: 38px;
 	font-family: "Cuprum", Arial, sans-serif;
 	font-weight: 400;
 	font-size: 14px;
@@ -675,6 +695,7 @@ img {
 	color: var(--basic-white);
 	opacity: 0.8;
 	background-color: rgba(255, 255, 255, 0.3);
+	text-transform: uppercase;
 }
 
 .mat-link:hover,
@@ -695,9 +716,14 @@ img {
 
 .logo-footer {
 	width: 220px;
+	min-height: 68px;
 	text-align: center;
 	background-color: var(--basic-carmine-pink);
 	box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
+}
+
+.logo-footer img {
+	padding-top: 20px;
 }
 
 .footer {
@@ -713,13 +739,16 @@ img {
 
 .wrap-second-nav {
 	background-color: var(--basic-night-blue);
+	min-height: 107px;
 }
 
 .second-footer-section {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	font-size: 16px;
 	line-height: 18px;
+	min-height: inherit;
 }
 
 .second-footer-section,
@@ -729,6 +758,10 @@ img {
 
 .second-footer-section a {
 	color: var(--basic-shiny-orange);
+}
+
+.social-icons {
+	margin-left: 74px;
 }
 
 .social-icons li {
@@ -775,6 +808,7 @@ img {
 
 .footer-wrapper-main {
 	background-color: var(--basic-purple-blue);
+	min-height: 193px;
 }
 
 .wrap-main-nav {
@@ -812,11 +846,23 @@ img {
 }
 
 .footer-nav-services {
-	width: 480px;
+	width: 600px;
+	font-family: "Cuprum", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px
 }
 
 .footer-nav {
-	width: 480px;
+	width: 600px;
+	font-family: "Cuprum", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px
+}
+
+.footer-nav .ul-style{
+	margin-left: 48px;
 }
 
 .footer-services a {
@@ -904,17 +950,14 @@ img {
 	background-color: transparent;
 }
 
-.price-min,
-.price-max {
-	font-family: "PT Sans", Arial, sans-serif;
-	font-weight: 400;
-}
-
 .filter h2,
 .sorting h2 {
+	font-family: "PT Sans", Arial, sans-serif;
 	font-size: 13px;
 	line-height: 18px;
 	color: var(--basic-black);
+	text-transform: uppercase;
+	font-weight: 400;
 }
 
 .sorting p {
@@ -961,6 +1004,7 @@ img {
 .product-cards h3 {
 	font-size: 18px;
 	line-height: 20px;
+	text-align: center;
 }
 
 .button-buy,
@@ -1010,6 +1054,7 @@ img {
 	line-height: 18px;
 	color: var(--basic-white-aluminum);
 	text-decoration: line-through;
+	margin: 0;
 }
 
 .about-perf {
@@ -1021,15 +1066,19 @@ img {
 }
 
 .new-price {
+	display: inline-block;
 	width: 141px;
 	min-height: 38px;
 	font-weight: 700;
 	font-size: 17px;
 	line-height: 18px;
 	color: var(--basic-pearl-white);
-	background-image: url(../img/red_button.jpg)
+	background-image: url(../img/red_button.jpg);
+	background-repeat: no-repeat;
+	margin: 0;
+	text-align: center;
+	padding-top: 10px;
 }
-
 .page-navigation {
 	font-size: 13px;
 	line-height: 18px;
@@ -1058,9 +1107,21 @@ img {
 	background: var(--basic-carmine-pink);
 }
 
-.popular-manufacturers li {
+.manufacturers {
+	min-height: 310px;
+	align-content: space-between;
+}
+
+.popular-manufacturers ul a {
 	width: 220px;
-	min-height: 145px;
+	display: block;
+	text-align: center;
+	line-height: 145px;
+}
+
+.popular-manufacturers img {
+	vertical-align: middle;
+	
 }
 
 .open-catalog-slider {
@@ -1075,6 +1136,7 @@ img {
 	padding-bottom: 10px;
 	padding-left: 25px;
 	padding-right: 25px;
+	margin-right: 14px;
 }
 
 .all-popular-manufacturers {
@@ -1082,13 +1144,16 @@ img {
 	padding-bottom: 10px;
 	padding-left: 39px;
 	padding-right: 39px;
+	margin-right: 14px;
 }
 
 .company-details {
+	display: block;
+	width: 220px;
+	text-align: center;
 	padding-top: 11px;
 	padding-bottom: 11px;
-	padding-left: 40px;
-	padding-right: 40px;
+	margin-top: 15px;
 }
 
 .open-catalog-slider,
@@ -1204,6 +1269,17 @@ img {
 	grid-template-rows: 143px 143px 143px;
 }
 
+.promo-block h3 {
+	padding-left: 22px;
+}
+
+.promo-block a {
+	margin-left: 22px;
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
 .drills-cards {
 	display: none;
 	margin: 10px;
@@ -1238,24 +1314,101 @@ img {
 	justify-content: space-between;
 	align-items: center;
 	background-color: var(--basic-beige);
+	padding-top: 5px;
+	padding-bottom: 5px;
+	margin-top: 70px;
+}
+
+.wrapp-ppular .sections-headline {
+	margin-left: 28px;
 }
 
 .wrapp-card {
 	display: flex;
 	justify-content: space-between;
+	margin-top: 20px;
 }
 
-.wrapp-card article {
+.wrapp-card article, .product-cards article {
 	margin-right: 20px;
+	padding: 0;
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+
+
+.wrapp-card article img, .product-cards article img {
+	order: -1;
+}
+
+.wrapp-card article h3 {
+	text-align: center;
+	margin-top: 0;
 }
 
 .services {
 	background-color: var(--basic-periwinkle-craiola);
+	margin-top: 75px;
+}
+
+.services p {
+	width: 394px;
+	font-family: "PT Sans", Arial, sans-serif;
+	font-weight: 400;
+	font-size: 13px;
+	line-height: 24px;
+	margin: 0;
 }
 
 .services-list,
 .list-couriers {
 	list-style-type: none;
+}
+
+.services-list li:not(:nth-child(1)){
+	color: var(--basic-white);
+	background-color: var(--basic-purple-blue);
+}
+
+.services-list li:first-child{
+	color: var(--basic-purple-blue);
+	background-color: var(--basic-white);
+}
+
+.services-list{
+	padding: 0;
+}
+
+.services-list li {
+	width: 240px;
+	height: 64px;
+}
+
+.services-list p {
+	padding-left: 22px;
+	padding-top: 15px;
+	font-weight: 700;
+	font-size: 21px;
+	line-height: 30px;
+}
+
+.services-list {
+	position: relative;
+}
+
+.services-list::after {
+	content: "";
+	position: absolute;
+	top: -42px;
+	left: 230px;
+	width: 10px;
+  height: 279px;
+  background-image: url(../img/shadow.png);
+
 }
 
 .list-couriers li{
@@ -1286,11 +1439,11 @@ img {
 	font-weight: 400;
 	font-size: 13px;
 	line-height: 24px;
-	width: 313px;
 }
 
 .wrap-services {
 	display: flex;
+	padding-bottom: 100px;
 }
 
 .list-couriers {
@@ -1306,6 +1459,10 @@ img {
 	margin-bottom: 70px;
 }
 
+.company-description {
+	width: 480px;
+}
+
 .wrap-content {
 	display: grid;
 	grid-template-columns: 220px 1fr;
@@ -1319,6 +1476,9 @@ img {
 
 .sorting {
 	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	margin-left: 20px;
 }
 
 .product-cards {
@@ -1385,7 +1545,7 @@ img {
 	min-width: 283px;
 	margin-left: auto;
 	background-image: url(../img/service_delivery_background.png);
-	background-position: 150px;
+	background-position: 150px 56px;
 	background-repeat: no-repeat;
 }
 
@@ -1483,4 +1643,116 @@ img {
 
 .list-manufacturers input[type=radio]:checked+label:hover::before {
 	background-image: url(../img/radio_on_hover.png);
+}
+
+.fieldset-wrap {
+	border: none;
+	padding: 0;
+	margin: 0;
+}
+
+.range-wrap {
+	width: 220px;
+	min-height: 80px;
+	background-color: var(--basic-pearl-white);
+	margin-top: 28px;
+	margin-bottom: 28px;
+	text-align: center;
+}
+
+.range-controls {
+	display: inline-block;
+	width: 180px;
+	position: relative;
+	margin-top: 18%;
+}
+
+.range-controls button {
+	background: var(--basic-white-aluminum);
+}
+	
+.scale {
+	height: 2px;
+	background-color: var(--basic-pale-blue);
+}
+
+.range-toggle {
+	position: absolute;
+  top: -9px;
+  width: 20px;
+  height: 20px;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 2px 1px 0 rgba(0,1,1,.2);
+  box-shadow: 0 2px 1px 0 rgba(0,1,1,.2);
+  cursor: pointer;
+  padding: 0;
+}
+
+.range-toggle-min {
+	left: 0;
+}
+
+.range-toggle-max {
+	left: 79.5%;
+}
+
+.bar {
+	width: 83%;
+  height: 2px;
+  background: var(--basic-dark-green);
+}
+
+.price-max, .price-min{
+	display: inline-block;
+	padding: 0;
+	border: none;
+	width: 95px;
+	min-height: 38px;
+	text-align: center;
+	background-color: var(--basic-pearl-white);
+}
+
+.price-max {
+	margin-left: auto;
+}
+
+.wrap-price {
+	position: relative;
+	display: flex;
+}
+
+.wrap-price::before {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 48%;
+	right: 50%;
+	bottom: 50%;
+	width: 10px;
+	height: 1.2px;
+	background-color: var(--basic-black);
+}
+
+.h-color {
+	color: var(--basic-purple-blue);
+}
+
+.contact-block {
+	width: 270px;
+	text-align: center;
+}
+
+.wrap-cont-number {
+	width: 270px;
+  border: solid 3px #ffffff;
+}
+
+.buy-popup {
+	display: none;
+}
+
+.wrap-logo {
+	position: relative;
+	justify-content: flex-end;
 }
