--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,12 @@ img {
 
 /* Селекторы */
 
+.h-color {
+	padding-left: 41px;
+	color: var(--basic-purple-blue);
+	background-color: var( --basic-periwinkle-craiola);
+}
+
 .sections-headline {
 	font-family: "Cuprum", Arial, sans-serif;
 	font-style: normal;
@@ -117,7 +123,6 @@ img {
 	margin: 0;
 	padding-top: 30px;
 	padding-bottom: 30px;
-
 }
 
 .sorting {
@@ -149,6 +154,7 @@ img {
 	padding-bottom: 10px;
 	width: 220px;
 	border: 1px solid var(--basic-gainsborough);
+	margin-top: 12px;
 }
 
 .slider-button-left {
@@ -196,7 +202,7 @@ img {
 	padding-right: 61px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	margin-top: 25px;
+	margin-top: 23px;
 }
 
 .feed-back-button:active {
@@ -205,7 +211,6 @@ img {
 
 .log-in {
 	width: 121px;
-	min-height: 45px;
 	margin-right: 10px;
 }
 
@@ -232,8 +237,12 @@ img {
 	font-size: 21px;
 	line-height: 21px;
 	background-color: var(--basic-white);
-	padding-left: 18px;
-	margin: 0;
+	padding-top: 11px;
+	padding-bottom: 12px;
+	padding-left: 14px;
+	margin-right: 4px;
+	margin-left: 19px;
+	margin-top: 4px;
 }
 
 .log-in::before {
@@ -250,7 +259,7 @@ img {
 
 .input-background {
 	background-color: transparent;
-	padding-left: 43px;
+	padding-left: 42px;
 }
 
 .nav-menu .ul-style:last-child {
@@ -263,10 +272,6 @@ img {
 	align-items: center;
 	list-style-type: none;
 	padding: 0;
-}
-
-.ul-style:first-child {
-	margin-left: 71px;
 }
 
 .ul-style li {
@@ -301,6 +306,18 @@ img {
 	display: none;
 }
 
+.feedback-info {
+	display: inline-block;
+	margin-left: 14px;
+	margin-bottom: 18px;
+}
+
+.developed-by {
+	display: inline-block;
+	margin-right: 13px;
+	margin-bottom: 18px;
+}
+
 .feedback-info a:hover,
 .developed-by a:hover {
 	text-decoration: underline;
@@ -315,7 +332,7 @@ img {
 .head-logo {
 	position: absolute;
 	top: 0;
-	left: 0;
+	left: 10px;
 	width: 220px;
 	min-height: 47px;
 	background-color: var(--basic-carmine-pink);
@@ -344,10 +361,11 @@ img {
 
 .user-panel-login {
 	color: var(--basic-black);
-	padding-top: 14px;
+	padding-top: 12px;
 	position: relative;
-	padding-left: 53px;
-	
+	padding-left: 56px;
+	padding-top: 8px;
+	margin-top: 5px;
 }
 
 .user-panel-logout {
@@ -361,7 +379,7 @@ img {
 	content: "";
 	position: absolute;
 	background-image: url(../img/icon_user.png);
-	top: 30%;
+	top: 23%;
 	left: 15px;
 	width: 20px;
 	height: 18px;
@@ -373,7 +391,7 @@ img {
 	position: absolute;
 	background-image: url(../img/icon_logout.png);
 	background-repeat: no-repeat;
-	top: 30%;
+	top: 33%;
 	left: 25%;
 	width: 20px;
 	height: 17px;
@@ -405,6 +423,7 @@ img {
 	font-size: 21px;
 	line-height: 21px;
 	background-color: var(--basic-white);
+	margin-top: 13px;
 }
 
 .registration {
@@ -432,13 +451,12 @@ img {
 }
 
 .user-bookmarks {
-	width: 100px;
+	width: 94px;
 	min-width: 42px;
 	position: relative;
 	padding-top: 9px;
 	padding-bottom: 9px;
-	padding-left: 30px;
-
+	padding-left: 42px;
 }
 
 .user-bookmarks::before {
@@ -447,7 +465,7 @@ img {
 	height: 16px;
 	position: absolute;
 	top: 13px;
-	left: 8px;
+	left: 19px;
 	background-image: url(../img/Shape.png);
 	background-repeat: no-repeat;
 	opacity: 0.3;
@@ -467,8 +485,8 @@ img {
 	position: relative;
 	padding-top: 9px;
 	padding-bottom: 9px;
-	padding-left: 30px;
-
+	padding-left: 36px;
+	margin-left: 26px;
 }
 
 .user-store-basket::before {
@@ -478,7 +496,7 @@ img {
 	height: 18px;
 	position: absolute;
 	top: 13px;
-	left: 8px;
+	left: 13px;
 	background-image: url(../img/inv.svg);
 	background-repeat: no-repeat;
 	opacity: 0.3;
@@ -505,7 +523,7 @@ img {
 	background-color: var( --basic-dark-green);
 	text-align: center;
 	padding-top: 10px;
-	
+	margin-left: 1px;
 }
 
 .checkout-main-panel:active {
@@ -533,13 +551,14 @@ img {
 	font-size: 16px;
 	line-height: 23px;
 	font-style: italic;
+	margin-top: 22px;
 }
 
 .cont-number {
 	position: relative;
 	width: 270px;
 	min-width: 45px;
-	margin-left: 40px;
+	margin-left: 28px;
 	color: var(--basic-carmine-pink);
 	font-weight: 700;
 	font-size: 21px;
@@ -552,7 +571,7 @@ img {
 	height: 19px;
 	position: absolute;
 	top: 5px;
-	left: -28px;
+	left: -33px;
 	background-image: url(../img/icon_phone.png);
 	background-repeat: no-repeat;
 }
@@ -637,6 +656,7 @@ img {
 	font-weight: 400;
 	font-size: 18px;
 	line-height: 24px;
+	margin: 0;
 }
 
 .main-nav {
@@ -645,6 +665,7 @@ img {
 	padding-top: 18px;
 	padding-bottom: 18px;
 	margin: 0 auto;
+	margin-top: 5px;
 	margin-bottom: 60px;
 }
 
@@ -664,20 +685,36 @@ img {
 .main-nav .ul-style {
 	margin-top: 0;
 	margin-bottom: 0;
+	margin-left: 52px;
+	margin-right: 47px;
 }
 
-.promo-block h3:nth-last-child(2n) {
+.promo-block h3 {
+	padding-left: 22px;
+	font-size: 36px;
+	line-height: 36px;
+}
+
+.materials-cards h3, .tools-cards h3, 
+.equipment-cards h3, .sales-cards h3, 
+.delivery-cards h3 {
 	font-family: "Cuprum", Arial, sans-serif;
 	font-weight: 700;
-	font-size: 30px;
+	font-size: 24px;
 	line-height: 30px;
+	margin-bottom: 13px;
 	color: var(--basic-white);
 }
 
 .slider-name {
+	font-family: "Cuprum", Arial, sans-serif;
+	font-weight: 700;
 	text-transform: uppercase;
 	margin: 0;
+	margin-bottom: 7px;
 	padding-left: 24px;
+	color: var(--basic-white);
+
 }
 
 .slider-info {
@@ -687,7 +724,7 @@ img {
 	line-height: 24px;
 	color: var(--basic-white);
 	margin: 0;
-	padding-left: 24px;
+	padding-left: 23px;
 }
 
 .mat-link,
@@ -726,7 +763,7 @@ img {
 
 .logo-footer {
 	width: 220px;
-	min-height: 68px;
+	height: 68px;
 	text-align: center;
 	background-color: var(--basic-carmine-pink);
 	box-shadow: inset 0px -5px 0px rgba(0, 0, 0, 0.24);
@@ -771,7 +808,8 @@ img {
 }
 
 .social-icons {
-	margin-left: 74px;
+	margin-left: 65px;
+	margin-right: 52px;
 }
 
 .social-icons li {
@@ -781,7 +819,7 @@ img {
 	background-color: var(--basic-sapphire-blue);
 	border-radius: 100px;
 	border: 0px solid;
-	margin-right: 5px;
+	margin-right: 1px;
 }
 
 .social-icons li:hover {
@@ -835,6 +873,10 @@ img {
 .footer-adress {
 	width: 321px;
 	display: inline-block;
+	font-size: 18px;
+	line-height: 24px;
+	margin-top: 12px;
+	margin-left: 3px;
 }
 
 .footer-nav a {
@@ -872,7 +914,12 @@ img {
 }
 
 .footer-nav .ul-style{
-	margin-left: 48px;
+	margin-top: 36px;
+	margin-left: 53px;
+}
+
+.footer-services {
+	margin-left: 76px;
 }
 
 .footer-services a {
@@ -890,6 +937,7 @@ img {
 
 .bread-crumbs ul {
 	padding-left: 25px;
+	margin-top: 21px;
 }
 
 .bread-crumbs::before {
@@ -898,7 +946,7 @@ img {
 	width: 14px;
 	height: 12px;
 	background-image: url(../img/icon_home.jpg);
-	top: 18px;
+	top: 24px;
 	left: 0;
 }
 
@@ -921,8 +969,8 @@ img {
 	content: "";
 	position: absolute;
 	background-image: url(../img/icon_right_small.jpg);
-	top: 2px;
-	left: 0;
+	top: 3px;
+	left: 6px;
 	width: 8px;
 	height: 12px;
 
@@ -939,7 +987,7 @@ img {
 .filter legend {
 	font-weight: 700;
 	font-size: 17px;
-	line-height: 55px;
+	line-height: 30px;
 	text-transform: uppercase;
 }
 
@@ -1086,8 +1134,6 @@ img {
 
 .new-price {
 	display: inline-block;
-	width: 141px;
-	min-height: 38px;
 	font-weight: 700;
 	font-size: 17px;
 	line-height: 18px;
@@ -1097,8 +1143,13 @@ img {
 	margin: 0;
 	text-align: center;
 	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 34px;
+	padding-right: 44px;
+	margin-left: 12px;
 	margin-top: 13px;
 }
+
 .page-navigation {
 	font-size: 13px;
 	line-height: 18px;
@@ -1144,6 +1195,7 @@ img {
 .manufacturers {
 	min-height: 310px;
 	align-content: space-between;
+	margin-top: 22px;
 }
 
 .popular-manufacturers ul a {
@@ -1155,13 +1207,6 @@ img {
 
 .popular-manufacturers img {
 	vertical-align: middle;
-	
-}
-
-.open-catalog-slider {
-	display: block;
-	width: 192px;
-	margin-top: 39px;
 }
 
 .all-popular-products {
@@ -1177,16 +1222,16 @@ img {
 	padding-bottom: 10px;
 	padding-left: 39px;
 	padding-right: 39px;
-	margin-right: 14px;
+	margin-right: 18px;
 }
 
 .company-details {
-	display: block;
+	display: inline-block;
 	width: 220px;
 	text-align: center;
 	padding-top: 11px;
 	padding-bottom: 11px;
-	margin-top: 15px;
+	margin-top: 18px;
 }
 
 .open-catalog-slider,
@@ -1225,10 +1270,10 @@ img {
 	background-image: url(../img/icon_materials.png);
 	background-repeat: no-repeat;
 	background-position: 213px;
-	margin-left: 0;
+	/* margin-left: 0;
 	margin-top: 10px;
 	margin-right: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 10px; */
 }
 
 .materials-cards  h3, 
@@ -1237,7 +1282,7 @@ img {
 .sales-cards  h3, 
 .delivery-cards h3 {
 	margin-top: 20px;
-	margin-bottom: 10px;
+	margin-bottom: 12px;
 }
 
 .materials-cards::after {
@@ -1257,7 +1302,6 @@ img {
 	background-image: url(../img/icon_tool.png);
 	background-repeat: no-repeat;
 	background-position: 194px;
-	margin: 10px;
 }
 
 .equipment-cards {
@@ -1265,7 +1309,6 @@ img {
 	background-image: url(../img/icon_equipment.png);
 	background-repeat: no-repeat;
 	background-position: 191px;
-	margin: 10px;
 }
 
 .sales-cards {
@@ -1310,25 +1353,39 @@ img {
 	padding: 0 10px;
 }
 
+.popular-manufacturers {
+	margin-top: 48px;
+}
+
 .main-panel .container {
 	display: flex;
 }
 
 .promo-block {
 	display: grid;
-	grid-template-columns: 310px 320px 320px;
-	grid-template-rows: 143px 143px 143px;
+	grid-template-columns: 300px 300px 300px;
+	grid-template-rows: 123px 123px 123px;
+	gap: 20px;
+	margin-top: 60px;
 }
 
-.promo-block h3 {
-	padding-left: 22px;
-}
-
-.promo-block a {
+.mat-link, .tool-link, 
+.equ-link, .sal-link, 
+.del-link {
 	margin-left: 22px;
 	text-align: center;
 	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-bottom: 12px;
+}
+
+.open-catalog-slider {
+	text-align: center;
+	display: block;
+	width: 192px;
+	margin-top: 34px;
+	margin-left: 24px;
+	padding-top: 11px;
+	padding-bottom: 9px;
 }
 
 .drills-cards {
@@ -1341,22 +1398,18 @@ img {
 	grid-column-end: 3;
 	grid-row-end: 4;
 	grid-row-start: 2;
-	margin-left: 0;
-	margin-top: 10px;
-	margin-right: 10px;
-	margin-bottom: 10px;
+
 }
 
 .sales-cards {
 	grid-column-start: 3;
 	grid-row-end: 3;
-	margin: 10px;
 }
 
 .delivery-cards {
 	grid-column-start: 3;
 	grid-row-start: 3;
-	margin: 10px;
+
 }
 
 .wrapp-ppular {
@@ -1365,19 +1418,17 @@ img {
 	justify-content: space-between;
 	align-items: center;
 	background-color: var(--basic-beige);
-	padding-top: 5px;
-	padding-bottom: 5px;
-	margin-top: 70px;
+	margin-top: 21px;
 }
 
 .wrapp-ppular .sections-headline {
-	margin-left: 28px;
+	padding-left: 27px;
 }
 
 .wrapp-card {
 	display: flex;
 	justify-content: space-between;
-	margin-top: 20px;
+	margin-top: 19px;
 }
 
 .wrapp-card article, .product-cards article {
@@ -1396,8 +1447,10 @@ img {
 
 .wrapp-card article h3 {
 	text-align: center;
-	margin-top: 8px;
+	margin-top: 9px;
 	margin-bottom: 0;
+	font-size: 18px;
+	line-height: 20px;
 }
 
 .services {
@@ -1431,16 +1484,17 @@ img {
 
 .services-list{
 	padding: 0;
+	margin-top: 70px;
 }
 
 .services-list li {
 	width: 240px;
-	height: 64px;
+	min-height: 61px;
 }
 
 .services-list p {
-	padding-left: 22px;
-	padding-top: 15px;
+	padding-left: 20px;
+	padding-top: 12px;
 	font-weight: 700;
 	font-size: 21px;
 	line-height: 30px;
@@ -1467,6 +1521,10 @@ img {
 
 .list-couriers li{
 	position: relative;
+	font-family: "Cuprum", Arial, sans-serif;
+	font-weight: 400;
+	font-size: 18px;
+	line-height: 24px;
 }
 
 .list-couriers li p::before {
@@ -1475,17 +1533,21 @@ img {
 	width: 25px;
 	height: 2px;
 	background-image: url(../img/dash.png);
-	top: 10px;
-	left: -35px;
+	top: 11px;
+	left: -38px;
 }
 
 .services-delivery {
+	display: inline-block;
 	font-family: "Cuprum", Arial, sans-serif;
 	font-weight: 400;
 	font-size: 30px;
 	line-height: 30px;
 	color: var(--basic-purple-blue);
 	text-transform: uppercase;
+	padding-left: 0px;
+  margin-top: 68px;
+  margin-bottom: 31px;
 }
 
 .service-description {
@@ -1500,11 +1562,14 @@ img {
 	padding-bottom: 100px;
 }
 
-.list-couriers {
-	font-family: "Cuprum", Arial, sans-serif;
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 24px;
+.list-couriers  {
+	min-height: 96px;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	margin-top: 2px;
+	padding-left: 38px;
 }
 
 .wrap-company-description {
@@ -1534,13 +1599,17 @@ img {
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
-	padding-left: 20px;
+	padding-left: 40px;
 }
 
 .product-cards {
 	display: flex;
 	flex-wrap: wrap;
 	padding-top: 27px;
+}
+
+.product-cards-catalog {
+	padding-top: 29px;
 }
 
 .page-navigation {
@@ -1554,7 +1623,10 @@ img {
 	height: 18px;
 	margin-right: 18px;
 	background-color: transparent;
+}
 
+.sorting-button-dwn {
+	margin-right: 37px;
 }
 
 .sorting-button-up .sorting-icon {
@@ -1584,10 +1656,11 @@ img {
 	min-height: inherit;
 	padding: 0;
 	margin-left: 20px;
+	margin-top: 33px;
 }
 
 .ul-page-nav li {
-	margin-right: 10px;
+	margin-right: 8px;
 }
 
 .wrap-about-rotary {
@@ -1598,12 +1671,17 @@ img {
     padding-bottom: 68px;
 }
 
+.service-description-second {
+	margin-top: 26px;
+	margin-bottom: 0;
+}
+
 .services-delivery-section {
 	width: 619px;
 	min-width: 283px;
 	margin-left: auto;
 	background-image: url(../img/service_delivery_background.png);
-	background-position: 150px 56px;
+	background-position: 150px 89px;
 	background-repeat: no-repeat;
 }
 
@@ -1617,7 +1695,6 @@ img {
 
 .list-manufacturers .label-checkbox {
 	padding-left: 25px;
-	margin-bottom: 16px;
 }
 
 .list-manufacturers li:last-child label {
@@ -1641,7 +1718,7 @@ img {
 
 .list-manufacturers input[type=checkbox]+label {
 	position: relative;
-	padding-left: 40px;
+	padding-left: 35px;
 	padding-top: 2px;
 	display: inline-block;
 	vertical-align: middle;
@@ -1649,7 +1726,7 @@ img {
 
 .list-manufacturers input[type=radio]+label {
 	position: relative;
-	padding-left: 40px;
+	padding-left: 35px;
 	padding-top: 2px;
 	display: inline-block;
 	vertical-align: middle;
@@ -1705,15 +1782,11 @@ img {
 	background-image: url(../img/radio_on_hover.png);
 }
 
-.fieldset-wrap {
-	border: none;
-}
-
 .range-wrap {
 	width: 220px;
 	min-height: 80px;
 	background-color: var(--basic-pearl-white);
-	margin-bottom: 28px;
+	margin-top: 9px;
 	text-align: center;
 }
 
@@ -1721,7 +1794,7 @@ img {
 	display: inline-block;
 	width: 180px;
 	position: relative;
-	margin-top: 18%;
+	margin-top: 39px;
 }
 
 .range-controls button {
@@ -1747,11 +1820,11 @@ img {
 }
 
 .range-toggle-min {
-	left: 0;
+	left: -1px;
 }
 
 .range-toggle-max {
-	left: 79.5%;
+	left: 140px;
 }
 
 .bar {
@@ -1777,6 +1850,7 @@ img {
 .wrap-price {
 	position: relative;
 	display: flex;
+	margin-top: 9px;
 }
 
 .wrap-price::before {
@@ -1791,19 +1865,23 @@ img {
 	background-color: var(--basic-black);
 }
 
-.h-color {
-	padding-left: 28px;
-	color: var(--basic-purple-blue);
-	background-color: var( --basic-periwinkle-craiola);
-}
-
 .contact-block {
-	width: 270px;
+	width: 330px;
 	text-align: center;
 }
 
+.wrap-log-info {
+
+}
+
 .wrap-cont-number {
-	width: 270px;
+	width: 265px;
+	margin-top: 11px;
+	margin-left: 48px;
+	margin-bottom: 4px;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 3px;
   border: solid 3px #ffffff;
 }
 
@@ -1813,13 +1891,13 @@ img {
 
 .wrap-logo {
 	position: relative;
-	justify-content: flex-end;
 }
 
 .wrap-head-slider {
 	background-color: rgba(0, 0, 0, 0.25);
-	padding-top: 25px;
-	padding-bottom: 25px;
+	padding-top: 22px;
+	padding-bottom: 15px;
+	padding-left: 2px;
 }
 
 .wrap-slider-button {
@@ -1829,12 +1907,12 @@ img {
 .wrap-slider-radio {
 	position: absolute;
 	width: 60px;
-	left: 295px;
-	bottom: 36px;
+	left: 287px;
+	bottom: 33px;
 }
 
 .wrap-slider-radio label {
-	margin-left: 10px;
+	margin-left: 7px;
 }
 
 .wrap-slider-radio input[type=radio]+label{
@@ -1861,22 +1939,24 @@ img {
 }
 
 .my-orders {
-	margin-left: 18px;
+	margin-top: 8px;
+	margin-left: 26px;
+	padding-left: 18px;
+	display: inline-block;
 }
 
 .personal-area {
 	position: relative;
-	padding-left: 20px;
+	padding-left: 28px;
 }
 
 .personal-area::before {
 	position: absolute;
-	left: 0;
-	left: 5px;
+	left: 10px;
 	top: 6px;
 	content: "";
-	width: 6px;
-	height: 6px;
+	width: 4px;
+	height: 4px;
 	background: linear-gradient(0deg, var(--basic-purple-blue), var(--basic-purple-blue)), #FFFFFF;
 	border-radius: 100px;
 }
@@ -1912,24 +1992,19 @@ img {
 
 .wrap-img {
 	order: -1;
-	height: 170px;
-	
+	width: 220px;
+	text-align: center;
 	line-height: 170px;
 }
 
 .wrap-img img {
-	
+	padding-right: 13px;
 	vertical-align: middle;
-	
 }
 
 .wrap-p-price {
 	margin-top: 7px;
 	text-align: center;
-}
-
-.label-radio {
-	margin-bottom: 16px;
 }
 
 .form-filter .fieldset-wrap:nth-child(-n+2) {
@@ -1939,17 +2014,12 @@ img {
 	border-bottom: 1px solid var(--basic-gainsborough);
 	padding: 0;
 	padding-bottom: 25px;
-	margin: 0;
 }
 
 .fieldset-wrap {
 	padding: 0;
 	padding-bottom: 25px;
 	margin: 0;
-}
-
-.head-about {
-	padding-top: 64px;
 }
 
 .basket-active {
@@ -1975,3 +2045,80 @@ img {
 	fill: var(--basic-carmine-pink);
 }
 
+.authorization-registration-active {
+	margin-bottom: 20px;
+	width: 299px;
+}
+
+.map-contacts {
+	display: inline-block;
+	margin-top: 18px;
+}
+
+.copyright-company {
+	padding-left: 2px;
+	margin-right: 40px;
+}
+
+.catalog-link-crumbs {
+	margin-left: 17px;
+}
+
+.tool-link-crumbs {
+	margin-left: 17px;
+}
+
+.hammer-link-crumbs {
+	margin-left: 20px;
+}
+
+.sections-headline {
+	padding-left: 29px;
+	padding-top: 32px;
+	
+}
+
+.head-about {
+	padding-top: 64px;
+	padding-bottom: 23px;
+	padding-left: 0;
+}
+
+.fieldset-wrap {
+	border: none;
+	margin-top: 15px;
+}
+
+.fieldset-manufact {
+	min-height: 220px;
+}
+
+.fieldset-manufact li {
+	display: inline;
+	min-height: 23px;
+	margin-top: 16px;
+}
+
+.fieldset-power {
+	margin-top: 18px;
+}
+
+.fieldset-power-list li {
+	margin-top: 21px;
+}
+
+.wrap-cards-catalog {
+	margin-top: 28px;
+}
+
+.sections-headline-services {
+	padding-top: 60px;
+	padding-bottom: 26px;
+	padding-left: 0;
+}
+
+.sections-headline-description {
+	padding-top: 55px;
+	padding-bottom: 10px;
+	padding-left: 0;
+}
