--- a/css/style.css
+++ b/css/style.css
@@ -1085,7 +1085,7 @@ img {
 
 .store-basket {
 	position: fixed;
-	top: 0;
+	top: 20%;
 	left: 0;
 	right: 0;
 	margin: auto;
@@ -1645,12 +1645,13 @@ img {
 
 .wrapp-card {
 	display: flex;
+	width: 960px;
+	flex-wrap: wrap;
 	justify-content: space-between;
 	margin-top: 19px;
 }
 
 .wrapp-card article, .product-cards article {
-	margin-right: 20px;
 	padding: 0;
 	display: flex;
 	flex-direction: column;
@@ -2490,6 +2491,58 @@ img {
 	display: block;
 }
 
+.popup-show {
+	display: block;
+	animation: bounce 0.6s;
+}
+
+.popup-error {
+	display: block;
+	animation: shake 0.6s;
+}
+
 .hide {
 	display: none;
+}
+
+/* Анимация */
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-2000px);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
